--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="start">Play Individually</div>
                 <div id="gameTime"></div>
 
-                <div id="time">Time: <span id="remainingTime">60</span> min</div>
+                <div id="time">Time: <span id="remainingTime">60</span> seconds</div>
                 <div id="gameover">GAME OVER Your score: <span id="finalscore">0</span></div>            
             </div> 
 
